C'est une fin de soirée des familles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>La Récréation</title>
+  <title>La Récréation, restaurant du Lot</title>
+  <meta name="description" content="Un restaurant aux décor de récréation" />
+  <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="styles/foundation.min.css" />
   <link rel="stylesheet" href="styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
@@ -15,7 +17,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="index.html">La Récréation</a></h1>
+          <h1><a href="index.html" title="Page d'accueil">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="images/phone.png" alt="logo téléphone" />
@@ -34,11 +36,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="index.html">Accueil du site</a></li>
-              <li><a class="lineUnderLink" href="pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a class="lineUnderLink" href="pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a class="lineUnderLink" href="pages/french/environment.html">Environnement</a></li>
-              <li><a class="lineUnderLink" href="pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a class="lineUnderLink" href="index.html" title="Page d'accueil">Accueil du site</a></li>
+              <li><a class="lineUnderLink" href="pages/french/menuAndWine.html" title="Page menus et carte des vins">Menus et carte des vins</a></li>
+              <li><a class="lineUnderLink" href="pages/french/kitchenAndTakeAway.html" title="Page cours de cuisine et traiteur">Cours de cuisine et traiteur</a></li>
+              <li><a class="lineUnderLink" href="pages/french/environment.html" title="Page environnement">Environnement</a></li>
+              <li><a class="lineUnderLink" href="pages/french/contactAndPartner.html" title="Page contact et partenaires">Contact et partenaires</a></li>
             </ul>
           </nav>
         </div>
@@ -50,7 +52,7 @@
     <div class="row">
       <div class="columns large-6 medium-12 small-12">
         <div class="firstTextHome">
-          <h2>L’heure de <font color="#CC76CA">La Récréation</font> a sonné !<br/><br/></h2>
+          <h2>L’heure de <i>La Récréation</i> a sonné !<br/><br/></h2>
           <p>Un restaurant dépaysant, complétement atypique dans une ancienne école de l’entre-deux guerres. Salle de classes, cour de récréation avec préau transformé en jardin luxuriant, où l’on déjeune sous le marronnier ou les platanes mûriers.
             <br/>
             <br/>Le soir venu l’éclairage met en relief les anciens murs de pierres de cette place idillyque et chargé d’histoire où les artistes viennent exposer. Une cuisine inventive dans l’esprit du site, riche de saveurs et de surprises venue des 4 coins du monde garantissant des légumes frais issu du potager qui jouxte le restaurant. Le restaurant organise régulièrement des cours de cuisine et développe un service de traiteur à domicile.
@@ -64,10 +66,11 @@
       <div class="columns large-6 medium-12 small-12">
         <div class="slider">
           <figure>
-            <img src="images/slider1.jpg" alt="Crevette sésame">
+            <img src="images/slider1.jpg" alt="création de fruits">
             <img src="images/slider2.jpg" alt="Douceur de mangue">
-            <img src="images/slider3.jpg" alt="Biscuit au chocolat">
-            <img src="images/slider1.jpg" alt="Biscuit au chocolat">
+            <img src="images/slider3.jpg" alt="macaron">
+            <img src="images/slider4.jpg" alt="dessert">
+            
           </figure>
         </div>
       </div>
@@ -97,13 +100,13 @@
             <br/>46250 Les Arques</p>
           <p id="contactPhoneHome">Tél : 05 65 22 88 08</p>
           <h2>Horaires et jours d'ouverture</h2>
-          <p>Du <font color="#CC76CA">lundi</font> au <font color="#CC76CA">dimanche</font> de 12h à 15h15 et de 19h30 à 21h15. Fermé le mercredi et le jeudi.</p>
+          <p>Du <i>lundi</i> au <i>dimanche</i> de 12h à 15h15 et de 19h30 à 21h15. Fermé le mercredi et le jeudi.</p>
         </div>
       </div>
 
       <div class="columns large-6 medium-6 small-12">
         <div class="mapHome">
-          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="90%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="90%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
