--- a/pages/english/contactAndPartner.html
+++ b/pages/english/contactAndPartner.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="fr">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <title>La Récréation</title>
+  <title>La Récréation, Contact and partners</title>
+  <meta name="description" content="Need to locate us? Want to know? It's this way" />
+  <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
@@ -15,7 +17,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
+          <h1><a href="../../pages/english/index.html" title="Home page">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo phone" />
@@ -34,11 +36,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../pages/english/index.html">Home page</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html">Menus and wine list</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/environment.html">Environment</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html">Contact and partners</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/index.html" title="Home page">Home page</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html" title="Menus and wine list page">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html" title="Cooking classes and take away page">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/environment.html" title="Environment page">Environment</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html" title="Contact and partners page">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -56,7 +58,7 @@
             <br/>46250 Les Arques</p>
           <p id="contactPhoneHome">Phone : 05 65 22 88 08</p>
           <h2>Opening hours and days</h2>
-          <p><font color="#CC76CA">Monday</font> to <font color="#CC76CA">Sunday</font> from 12h to 15h15 and from 19h30 to 21h15. Closed on Wednesdays and Thursdays.</p>
+          <p><i>Monday</i> to <i>Sunday</i> from 12h to 13h30 and from 19h30 to 21h00. Closed on Wednesday and Thursday except in July and August closed ONLY on Wednesday.</p>
         </div>
       </div>
 
@@ -76,13 +78,13 @@
             <br/> For our meat or fish? They are directly chosen by the manager of the establishment so as to respect our commitment to local or French producers!
             <br/> To finish on a good note, our wine list will offer you a great diversity to accompany all our dishes. Wines from regions such as the tasty Château Lamartine and its three declensions.
             <br/>
-            <br/> La Récréation and its partners are waiting for you!
+            <br/> La Récréation and its partners are waiting for you!</p>
+          <p class="partners">List of partners
             <br/>
-            <br/> List of partners
-            <br/>
-            <br/> Voisin du restaurant : ( nom à vérifier )
-            <br/> Dishes : Entreprise Métro Toulouse
-            <br/> Wine : à rajouter des que je suis chez moi .</p>
+            <br/><a href="http://www.bonnestables-lot.fr/fiche.php?idfiche=7" title="Website Les Bonnes Tables du Lot">Les Bonnes Tables Du Lot</a>
+            <br/><a href="http://www.quercygourmand.tv/video/recette__tatin_foie_gras__magret_seche_-_quercygourmand-tv/" title="Website Quercy Gourmand TV">Quercy Gourmand TV</a>
+            <br/><a href="https://www.domaine-de-montsalvy.com/fr/" title="Website Domaine de Montsalvy ">Domaine de Montsalvy</a>
+          </p>
         </div>
       </div>
     </div>
@@ -109,7 +111,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a class="lineUnderLink" href="../../pages/english/legalMentions.html" title="Page Mentions légales">LEGAL MENTIONS</a>
+            <a class="lineUnderLink" href="../../pages/english/legalMentions.html" title="legal mentions page">LEGAL MENTIONS</a>
           </div>
         </div>
       </div>
