--- a/pages/english/environment.html
+++ b/pages/english/environment.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="fr">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <title>La Récréation</title>
+  <title>La Récréation, our environment</title>
+    <meta name="description" content="Discover the environment around La Récréation" />
+    <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
@@ -15,7 +17,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
+          <h1><a href="../../pages/english/index.html" title="Home page">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo phone" />
@@ -34,11 +36,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../pages/english/index.html">Home page</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html">Menus and wine list</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/environment.html">Environment</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html">Contact and partners</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/index.html" title="Home page">Home page</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html" title="Menus and wine list page">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html" title="Cooking classes and take away page">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/environment.html" title="Environment page">Environment</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html" title="Contact and partners page">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -59,7 +61,6 @@
 
             <br/>
             <br/> The restaurant is located in the town of Les Arques, a small village located in the south of France in the region "Midi Pyrenees" and more precisely in the department of Lot. This village is 26 km from Cahors and 26 km from Gourdon. To the south of the Périgord and to the south-east of the Dordogne, the village is classified for the Saint Laurent church, the frescoes of Saint Andrée, the old doyenneté and its tower. Les Arques is also known for its museum devoted to Ossip Zadkine, the workshops of Les Arques bringing each year a dozen artists from all over Europe, and of course the restaurant La Récréation. What an excitement in such a small village of 217 inhabitants.
-
           </p>
         </div>
       </div>
@@ -96,6 +97,7 @@
               <br/>
               <br/> Its cultural and historical heritage of great interest (mills of the Masse, medieval ironwork, chapel Saint-André, ...) continues to attract a large number of tourists.
               <br/> To discover this wetland, a 4.5 km interpretation circuit was built partly on grating. This circuit starting from the village of Arques, is equipped with terminals implanted along the route. By slipping the cards of the guide discovered, these terminals turn into orientation table and allow to understand the specificities of the spaces available to hikers. The Frescoes of Saint Andrew, the building could be dated to the 11th century according to the plan, construction techniques and paintings end of the 15th century.
+              <br/>The former closed school since 1986 continues to ring every lunch and every evening to welcome gourmets to the restaurant "LA RECREATION", an institution in the canton being part of the "Good Tables of the lot".
             </p>
           </div>
         </div>
