--- a/pages/english/index.html
+++ b/pages/english/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
-<html class="no-js" lang="fr">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <title>La Récréation</title>
+  <title>La Récréation, Restaurant of the Lot
+  </title>
+  <meta name="description" content="A restaurant with recreation decor" />
+  <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
@@ -15,7 +18,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
+          <h1><a href="../../pages/english/index.html" title="Home page">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo phone" />
@@ -34,11 +37,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../pages/english/index.html">Home page</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html">Menus and wine list</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/environment.html">Environment</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html">Contact and partners</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/index.html" title="Home page">Home page</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html" title="Menus and wine list page">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html" title="Cooking classes and take away page">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/environment.html" title="Environment page">Environment</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html" title="Contact and partners page">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -50,7 +53,7 @@
     <div class="row">
       <div class="columns large-6 medium-12 small-12">
         <div class="firstTextHome">
-          <h2>The hour of <font color="#CC76CA">La Récréation</font> rang!<br/><br/></h2>
+          <h2>The hour of <i>La Récréation</i> rang!<br/><br/></h2>
           <p>An exotic restaurant, completely atypical in an old school between the two wars. Classroom, playground with courtyard transformed into a lush garden, where one lunch under the chestnut tree or the mulberry trees.
             <br/>
             <br/>In the evening, lighting illuminates the ancient stone walls of this idyllic and historic place where artists come to exhibit. An inventive cuisine in the spirit of the site, rich in flavors and surprises from all over the world guaranteeing fresh vegetables from the vegetable garden adjacent to the restaurant. The restaurant organizes regular cooking classes and develops a catering service at home.
@@ -64,9 +67,10 @@
       <div class="columns large-6 medium-12 small-12">
         <div class="slider">
           <figure>
-            <img src="../../images/slider1.jpg" alt="Crevette sésame">
+            <img src="images/slider1.jpg" alt="fruits creation">
             <img src="../../images/slider2.jpg" alt="Douceur de mangue">
-            <img src="../../images/slider3.jpg" alt="Biscuit au chocolat">
+            <img src="../../images/slider3.jpg" alt="macaron">
+             <img src="images/slider4.jpg" alt="dessert">
           </figure>
         </div>
       </div>
@@ -74,9 +78,7 @@
     <div class="row">
       <div class="columns large-7 medium-12 small-12">
         <div class="videoHome">
-          <video width="520" height="340" controls>
-            <source src="../../images/laRecreation.mp4" type="video/mp4" alt="Votre navigateur ne supporte pas la balise vidéo.">
-          </video>
+          <iframe width="520" height="315" src="https://www.youtube.com/embed/ue_Gb2Lqw1I?ecver=1" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 
@@ -98,7 +100,7 @@
             <br/>46250 Les Arques</p>
           <p id="contactPhoneHome">Phone : 05 65 22 88 08</p>
           <h2>Opening hours and days</h2>
-          <p><font color="#CC76CA">Monday</font> to <font color="#CC76CA">Sunday</font> from 12h to 15h15 and from 19h30 to 21h15. Closed on Wednesdays and Thursdays.</p>
+          <p><i>Monday</i> to <i>Sunday</i> from 12h to 15h15 and from 19h30 to 21h15. Closed on Wednesdays and Thursdays.</p>
         </div>
       </div>
 
