--- a/pages/english/kitchenAndTakeaway.html
+++ b/pages/english/kitchenAndTakeaway.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="fr">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <title>La Récréation</title>
+  <title>La Récréation, Cooking classes and catering</title>
+    <meta name="description" content="Come take classes and enjoy our catering service" />
+    <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
@@ -15,7 +17,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
+          <h1><a href="../../pages/english/index.html" title="Home page">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo phone" />
@@ -28,18 +30,17 @@
         </div>
       </div>
     </div>
-    </div>
     <div class="menuSite">
       <div class="row">
         <div class="columns large-12 medium-12 small-12">
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../pages/english/index.html">Home page</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html">Menus and wine list</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/environment.html">Environment</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html">Contact and partners</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/index.html" title="Home page">Home page</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html" title="Menus and wine list page">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html" title="Cooking classes and take away page">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/environment.html" title="Environment page">Environment</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html" title="Contact and partners page">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -71,7 +72,39 @@
         </div>
       </div>
     </div>
-
+ <div id="middlePartKitchen">
+      <div class="row">
+        <div class="columns large-12 medium-12 small-12">
+          <div class="middlePartText">
+            <h2>Courses</h2>
+            <p>8:50 Arrival, coffee and briefing.
+              <br/> 9:00 Start of workshops.
+              <br/> 12:00 End of workshops.
+              <br/> 12:10 Creation of a cocktail of the menu and tasting of amuse bouche (pupils and accompanying persons).
+              <br/> 12:30 The whole group enjoys the prepared menu (pupils and accompanying persons).
+              <br/> 14:30 / 15h:00 End of the session.
+              <br/>
+              <br/> Prices:
+              <br/>
+              <br/> Students: 65 € (Cooking class, cocktail and tasting meal).
+              <br/> Accompaniers: 35 € (cocktail and tasting meal).
+              <br/> RESERVATION : 05 65 22 88 08 ou lsoupirot@gmail.com.
+              <br/>
+              <br/> Reminder:
+              <br/>
+              <br/> Students: Assist and participate in cooking classes, implement each step described by the chef.
+              <br/>
+              <br/> Accompaniers: They can take pictures, attend the course as spectators or animators, they are however present to taste and criticize.
+              <br/> They can also arrive at noon for the tasting part.
+              <br/>
+              <br/> Supplied Material:
+              <br/>
+              <br/> Apron, cloth, galley knife and cutting board are provided.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div id="secondPartKitchen">
       <div class="row">
         <div class="columns large-5 medium-12 small-12">
