--- a/pages/english/legalMentions.html
+++ b/pages/english/legalMentions.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="fr">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <title>La Récréation</title>
+  <title>La Récréation, legal mentions</title>
+  <meta name="description" content="Legal notice of the site" />
+  <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
@@ -15,7 +17,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
+          <h1><a href="../../pages/english/index.html" title="Home page">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo phone" />
@@ -28,18 +30,17 @@
         </div>
       </div>
     </div>
-    </div>
     <div class="menuSite">
       <div class="row">
         <div class="columns large-12 medium-12 small-12">
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../pages/english/index.html">Home page</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html">Menus and wine list</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/environment.html">Environment</a></li>
-              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html">Contact and partners</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/index.html" title="Home page">Home page</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html" title="Menus and wine list page">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html" title="Cooking classes and take away page">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/environment.html" title="Environment page">Environment</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html" title="Contact and partners page">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -51,7 +52,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="textLegal">
-          <h1>LEGALS MENTIONS</h1>
+          <h2>LEGALS MENTIONS</h2>
           <p>In accordance with the provisions of Article 6 III-1 of Law No. 2004-575 of June 21, 2004 for confidence in the digital economy, we inform you that :</p>
           <p>
             This site is edited by:
@@ -70,7 +71,6 @@
             The editor is: Mr. SOUPIROT LUDOVIC as a leader.
           </p>
           <p>
-            <!---- MODIFIER CA -->
             The host of the site ensuring the direct and permanent storage is:
             <br/>OVH
             <br/>SAS with capital of 10 069 020 €
@@ -107,6 +107,7 @@
             The user can not set up a hyperlink to the site without express prior authorization.</p>
         </div>
       </div>
+    </div>
   </section>
 
   <footer>
@@ -134,7 +135,6 @@
           </div>
         </div>
       </div>
-    </div>
     </div>
   </footer>
   <script type="text/javascript" src="../../scripts/main.js"></script>
