--- a/pages/english/menuAndWine.html
+++ b/pages/english/menuAndWine.html
@@ -1,6 +1,5 @@
-
-   <!doctype html>
-<html class="no-js" lang="fr">
+<!doctype html>
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -26,9 +25,9 @@
             <a href="../../index.html" title="Go to the french home page"><img src="../../images/flagFrench.png" alt="french flag" /></a>
             <a href="../english/index.html" title="Go to the english home page"><img src="../../images/flagEnglish.png" alt="english flag" /></a>
           </div>
-          </div>
         </div>
       </div>
+    </div>
     </div>
     <div class="menuSite">
       <div class="row">
@@ -48,7 +47,7 @@
     </div>
   </header>
 
-   <footer>
+  <footer>
     <div class="row">
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
