--- a/pages/french/contactAndPartner.html
+++ b/pages/french/contactAndPartner.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>La Récréation</title>
+  <title>La Récréation, Contact et partenaires</title>
+  <meta name="description" content="Besoin de nous localiser ? Envie d'en savoir ? C'est par ici" />
+  <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
@@ -15,7 +17,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../index.html">La Récréation</a></h1>
+          <h1><a href="../../index.html" title="Page d'accueil">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo téléphone" />
@@ -34,11 +36,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a class="lineUnderLink" href="../../index.html"title="Page d'accueil">Accueil du site</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html" title="Page menus et carte des vins">Menus et carte des vins</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html" title="Page cours de cuisine et traiteur">Cours de cuisine et traiteur</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/environment.html" title="Page environnement">Environnement</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html" title="Page contact et partenaires">Contact et partenaires</a></li>
             </ul>
           </nav>
         </div>
@@ -56,11 +58,10 @@
             <br/>46250 Les Arques</p>
           <p id="contactPhoneHome">Tél : 05 65 22 88 08</p>
           <h2>Horaires et jours d'ouverture</h2>
-          <p>Du <font color="#CC76CA">lundi</font> au <font color="#CC76CA">dimanche</font> de 12H à 13H30 Et de 19h30 à 21h00 Fermé le Mercredi et jeudi sauf en juillet et Aout fermé UNIQUEMENT le Mercredi.
+          <p>Du <i>lundi</i> au <i>dimanche</i> de 12H à 13H30 Et de 19h30 à 21h00. Fermé le Mercredi et jeudi sauf en juillet et Aout fermé UNIQUEMENT le Mercredi.
           </p>
         </div>
       </div>
-
       <div class="columns large-6 medium-6 small-12">
         <div class="mapHome">
           <iframe class="googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.6870004125844!2d1.2477162150621108!3d44.60342689848439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ac9dcb381468d9%3A0x44a6c3f858018649!2sRestaurant+La+R%C3%A9cr%C3%A9ation!5e0!3m2!1sfr!2sfr!4v1495912774201" width="90%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -82,9 +83,9 @@
           </p>
           <p class="partners">Liste des partenaires
             <br/>
-            <br/><a href="http://www.bonnestables-lot.fr/fiche.php?idfiche=7" title="">Les bonnes tables du lot</a>
-            <br/><a href="http://www.quercygourmand.tv/video/recette__tatin_foie_gras__magret_seche_-_quercygourmand-tv/" title="">Quercy gourmand TV</a>
-            <br/><a href="https://www.domaine-de-montsalvy.com/fr/" title="">Domaine de Montsalvy</a>
+            <br/><a href="http://www.bonnestables-lot.fr/fiche.php?idfiche=7" title="Website Les Bonnes Tables du Lot">Les Bonnes Tables Du Lot</a>
+            <br/><a href="http://www.quercygourmand.tv/video/recette__tatin_foie_gras__magret_seche_-_quercygourmand-tv/" title="Website Quercy Gourmand TV">Quercy Gourmand TV</a>
+            <br/><a href="https://www.domaine-de-montsalvy.com/fr/" title="Website Domaine de Montsalvy ">Domaine de Montsalvy</a>
           </p>
         </div>
       </div>
