--- a/pages/french/kitchenAndTakeaway.html
+++ b/pages/french/kitchenAndTakeaway.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>La Récréation</title>
+  <title>La Récréation, cours de cuisine et traiteur</title>
+  <meta name="description" content="Venez prendre des cours et profiter de notre service traiteur" />
+  <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
@@ -15,7 +17,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../index.html">La Récréation</a></h1>
+          <h1><a href="../../index.html" title="Page d'accueil">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo téléphone" />
@@ -34,11 +36,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a class="lineUnderLink" href="../../index.html" title="Page d'accueil">Accueil</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html" title="Page menus et carte des vins">Menus et carte des vins</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html" title="Page cours de cuisine et traiteur">Cours de cuisine et traiteur</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/environment.html" title="Page environnement">Environnement</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html" title="Page contact et partenaires">Contact et partenaires</a></li>
             </ul>
           </nav>
         </div>
@@ -52,7 +54,7 @@
       <div class="row">
         <div class="columns large-7 medium-12 small-12">
           <div class="firstPictureKitchen">
-            <img src="../../images/coursdecuisine.jpg" alt="Cours de cuisine" />
+            <img src="../../images/course1.jpg" alt="Cours de cuisine" />
           </div>
         </div>
         <div class="columns large-5 medium-12 small-12">
