--- a/pages/french/environment.html
+++ b/pages/french/environment.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>La Récréation</title>
+  <title>La Récréation, notre environnement</title>
+    <meta name="description" content="découvrez l'environnement autour de La Récréation" />
+    <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
@@ -15,7 +17,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../index.html">La Récréation</a></h1>
+          <h1><a href="../../index.html" title="Page d'accueil">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo téléphone" />
@@ -34,11 +36,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a class="lineUnderLink" href="../../index.html"title="Page d'accueil">Accueil du site</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html" title="Page menus et carte des vins">Menus et carte des vins</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html" title="Page cours de cuisine et traiteur">Cours de cuisine et traiteur</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/environment.html" title="Page environnement">Environnement</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html" title="Page contact et partenaires">Contact et partenaires</a></li>
             </ul>
           </nav>
         </div>
@@ -58,7 +60,6 @@
             <br/> Plus qu’un bon restaurant, c’est un voyage.
             <br/>
             <br/> Le restaurant se situe dans la commune des Arques, petit village situé au sud de la France dans la région « Midi Pyrénées » et plus précisément dans le département du Lot. Ce village se trouve à 26 km de Cahors et 26 km de Gourdon. Au sud du Périgord et au sud-est de la Dordogne, le village est classé pour l'église Saint Laurent, les Fresques de Saint Andrée, l'ancien doyenneté et sa tour. Les Arques est également connu pour son musée consacré à Ossip Zadkine, les ateliers des Arques faisant venir chaque année une douzaine d'artistes de toute l'Europe, et bien sûr le restaurant la Récréation. Que d'effervescence dans un si petit village de 217 habitants.
-
           </p>
         </div>
       </div>
