--- a/pages/french/legalMentions.html
+++ b/pages/french/legalMentions.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>La Récréation</title>
+  <title>La Récréation, mentions légales</title>
+  <meta name="description" content="Mentions légales du site" />
+  <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
@@ -15,7 +17,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../index.html">La Récréation</a></h1>
+          <h1><a href="../../index.html" title="Page d'accueil">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo téléphone" />
@@ -34,11 +36,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a class="lineUnderLink" href="../../index.html"title="Page d'accueil">Accueil du site</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html" title="Page menus et carte des vins">Menus et carte des vins</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html" title="Page cours de cuisine et traiteur">Cours de cuisine et traiteur</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/environment.html" title="Page environnement">Environnement</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html" title="Page contact et partenaires">Contact et partenaires</a></li>
             </ul>
           </nav>
         </div>
@@ -50,7 +52,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="textLegal">
-          <h1>MENTIONS LEGALES</h1>
+          <h2>MENTIONS LEGALES</h2>
           <p>Conformément aux dispositions de l’article 6 III-1 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, nous vous informons que :</p>
           <p>
             Le présent site est édité par :
