final Kentin vraiment

--- a/pages/english/index.html
+++ b/pages/english/index.html
@@ -67,10 +67,10 @@
       <div class="columns large-6 medium-12 small-12">
         <div class="slider">
           <figure>
-            <img src="images/slider1.jpg" alt="fruits creation">
+            <img src="../../images/slider1.jpg" alt="fruits creation">
             <img src="../../images/slider2.jpg" alt="Douceur de mangue">
             <img src="../../images/slider3.jpg" alt="macaron">
-             <img src="images/slider4.jpg" alt="dessert">
+             <img src="../../images/slider4.jpg" alt="dessert">
           </figure>
         </div>
       </div>
