--- a/pages/english/kitchenAndTakeaway.html
+++ b/pages/english/kitchenAndTakeaway.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>La Récréation, Cooking classes and catering</title>
-    <meta name="description" content="Come take classes and enjoy our catering service" />
-    <meta name="robots" content="index, follow" />
+  <meta name="description" content="Come take classes and enjoy our catering service" />
+  <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="columns large-7 medium-12 small-12">
           <div class="firstPictureKitchen">
-            <img src="../../images/coursdecuisine.jpg" alt="Cours de cuisine" />
+            <img src="../../images/course1.jpg" alt="Cours de cuisine" />
           </div>
         </div>
         <div class="columns large-5 medium-12 small-12">
@@ -72,7 +72,7 @@
         </div>
       </div>
     </div>
- <div id="middlePartKitchen">
+    <div id="middlePartKitchen">
       <div class="row">
         <div class="columns large-12 medium-12 small-12">
           <div class="middlePartText">
